# addventure

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  README.md  addventure.py  generate-social-image.sh  pyproject.toml  zensical.toml
.agents/skills/addventure-authoring/: SKILL.md
.claude/: settings.local.json
.github/workflows/: deploy-site.yml  publish.yml
docs/: advanced.md  getting-started.md  grammar.ebnf  index.md  reference.md  state-and-transformation.md  writing-rooms.md
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-04-01-cue-checks.md  2026-04-01-typst-pdf-output.md  2026-04-02-auto-items.md  2026-04-04-item-interaction-inheritance.md  2026-04-05-room-actions.md  2026-04-06-sealed-text.md  2026-04-07-signals.md  2026-04-12-web-editor.md
docs/superpowers/specs/: 2026-04-01-adv-format-v2-design.md  2026-04-01-auto-items-design.md  2026-04-01-cue-checks-design.md  2026-04-01-typst-pdf-output-design.md  2026-04-04-item-interaction-inheritance-design.md  2026-04-05-room-actions-design.md  2026-04-05-sealed-text-design.md  2026-04-07-epilogue-download-design.md  2026-04-07-signals-design.md  2026-04-12-web-editor-design.md
editor/: index.html  package-lock.json  package.json  tsconfig.json  vite-plugin-games.ts  vite.config.ts
editor/src/: App.svelte
editor/src/components/: ArrowBadge.svelte  ArrowEditor.svelte  GameSummary.svelte  GenerateButton.svelte  GenerateDialog.svelte  InteractionCard.svelte  InteractionEditor.svelte  InventoryPage.svelte  MainPanel.svelte  MapView.svelte  NarratorPage.svelte  ObjectCard.svelte  ProjectList.svelte  PuzzleFlow.svelte  RoomView.svelte  SettingsPanel.svelte  Sidebar.svelte  SignalCheckEditor.svelte  SourceView.svelte  SuggestObjectsDialog.svelte  TabBar.svelte  TargetBuilder.svelte  TopBar.svelte  VerbPicker.svelte  VerbsPage.svelte
editor/src/lib/: autocreate.ts  export.ts  factory.ts  filesystem.ts  helpers.ts  ollama.ts  parser.ts  persistence.ts  serializer.ts  store.svelte.ts  types.ts
editor/src/styles/: theme.css
editor/tests/: autocreate.test.ts  export.test.ts  factory.test.ts  helpers.test.ts  integration.test.ts  parser.test.ts  persistence.test.ts  serializer.test.ts
games/example/: basement.adv  basement.md  control_room.adv  control_room.md  global.adv  hallway.adv  hallway.md  index.md
games/example/the-outpost/: forest_road.md  generator_shed.md  index.md  relay_station.md
overrides/partials/: footer.html
site/: build.sh  index.html  preview.py  preview.sh
src/addventure/: __init__.py  cli.py  compiler.py  fillable.py  image_effects.py  jigsaw.py  md_writer.py  models.py  parser.py  pdf_writer.py  validator.py  writer.py
tests/: test_actions.py  test_chapters.py  test_cues.py  test_direct_potentials.py  test_fillable.py  test_item_interactions.py  test_pdf_writer.py  test_sealed.py  test_signals.py  test_strictness.py
(+15 files in other folders)
