[project]
name = "addventure"
version = "0.1.0"
description = "Compiler and writer for paper-based text adventures where addition IS the parser"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=6.9.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
adv = "addventure.cli:main"

[tool.uv]
package = true
