[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "addventure"
version = "1.3.0"
description = "Write interactive fiction played with pencil, paper, and addition"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Chris Beaven" },
]
keywords = ["interactive-fiction", "text-adventure", "game", "compiler", "paper", "tabletop", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pypdf>=6.9.2",
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://smileychris.github.io/addventure"
Documentation = "https://smileychris.github.io/addventure/getting-started/"
Repository = "https://github.com/SmileyChris/addventure"

[project.scripts]
addventure = "addventure.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = true
